name:                blog
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Sir4ur0n/blog#readme
license:             BSD3
author:              Julien Debon
maintainer:          julien.debon@pm.me
copyright:           WTFPL
category:            Development
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable blog
  main-is:             site.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:       base >= 4.7 && < 5,
                       hakyll
